[package]
name = "lin_fh"
version = "0.2.0"
authors = ["brian kellogg <theflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
walkdir = "2.3.1"
md5 = "0.7.0"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
chrono ="0.4.11"
file = "1.1.2"
tree_magic = "0.2.3"
path_abs = "0.5.0"
regex = "1.5.5"
lazy_static = "1.4.0"
arrayvec = "0.5.1"
libc = "0.2.68"
docopt = "1.1.0"