[package]
name = "lin_fh"
version = "0.3.1"
authors = ["brian kellogg <theflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
walkdir = "2.3.2"
md5 = "0.7.0"
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
chrono ="0.4.23"
file = "1.1.2"
tree_magic = "0.2.3"
path_abs = "0.5.1"
regex = "1.7.0"
lazy_static = "1.4.0"
arrayvec = "0.7.2"
libc = "0.2.138"
docopt = "1.1.1"