[package]
name = "lin_fh"
version = "0.7.5"
authors = ["brian kellogg <theflakes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
walkdir = "*"
md5 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono ="*"
file = "*"
tree_magic = "*"
path_abs = "*"
regex = "*"
lazy_static = "*"
arrayvec = "*"
libc = "*"
docopt = "*"
nix = "*"
memmap2 = "*"
bstr = "*"